<resources>
    <string name="app_name">Chunga.me</string>
    <string name="hello_world">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="weight_of_tusks">Weight of Tusks</string>
    <string name="left_kgs">Left (kgs)</string>
    <string name="right_kgs">Right (kgs)</string>
    <string name="action_more">More</string>
    <string name="logout">Logout</string>
    <string name="title_activity_phone_registration">Register</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="record_s">Record(s)</string>
    <string name="sync_str">Last Sync on {date}</string>
    <string name="incident_photo">Incident Photo</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="submit_confirm_button">Place order</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_incidences">Incidents</string>
    <string name="summary">Summary</string>
    <string name="activity">Activity</string>
    <string name="go">Go</string>
    <string name="sync_group_progress">Syncing group {from} of {to}</string>
    <string name="sync_record_progress">Syncing record {from} of {to}</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="from_gallery">From Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="ranger_name">Ranger Name</string>
    <string name="team_name">Team Name</string>
    <string name="ranger_id">Ranger ID</string>
    <string name="help">Help</string>
    <string name="export">Export</string>
    <string name="start_sync">Start Sync</string>
    <string name="title_activity_ivory">Ivory</string>
    <string name="title_activity_game_meat">Game Meat</string>
    <string name="title_activity_charcoal">Charcoal</string>
    <string name="title_activity_suspicious_aspects">Suspicious Activity</string>
    <string name="title_activity_game_meat_incident">Incident</string>
    <string name="title_activity_game_meat_traces">Traces of Incident</string>
    <string name="kilns">Kilns</string>
    <string name="bags">Bags</string>
    <string name="title_activity_charcoal_arrests">Arrests</string>
    <string name="title_activity_human_animal">Human / Animal Conflict</string>
    <string name="title_activity_sightings">Sightings</string>
    <string name="animals">Animals</string>
    <string name="animal_sighting">Animal Sightings</string>
    <string name="waterhole_sighting">Waterhole Sightings</string>
    <string name="animals_herds">Animals (Herds)</string>
    <string name="animals_individual">Animals (Individual)</string>
    <string name="title_activity_plants">Plants</string>
    <string name="title_activity_vegetation_sightings">Vegetation</string>
    <string name="animal_carcass">Animal Carcass</string>
    <string name="poaching_incidences">Poaching Incidences</string>
    <string name="human_wildlife_conflict">Human / Wildlife Conflict</string>
    <string name="sightings">Sightings</string>
    <string name="suspicious_activities">Suspicious Activities</string>
    <string name="suspicious_activity">Suspicious Activity</string>
    <string name="elephant">Elephant</string>
    <string name="rhino">Rhino</string>
    <string name="save">Save</string>
    <string name="weapons_used">Weapons Used</string>
    <string name="select_weapon">Select Weapon</string>
    <string name="machete">Machete</string>
    <string name="gun">Gun</string>
    <string name="hacksaw">Hacksaw</string>
    <string name="not_sure">Not Sure</string>
    <string name="extra_notes_optional">Extra Notes (Optional)</string>
    <string name="note">Note</string>
    <string name="type_of_carcass">Type of Carcass</string>
    <string name="no_of_arrests">No of Arrests</string>
    <string name="action_taken">Action Taken</string>
    <string name="proceed">Proceed</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="unit_of_measure">Unit of Measure</string>
    <string name="quantity">Quantity</string>
    <string name="approximate_age">Approximate Age</string>
    <string name="distance_seen">Distance Seen (Metres)</string>
    <string name="type_of_vegetation">Type of Vegetation</string>
    <string name="season">Season</string>
    <string name="current_state">Current State</string>
    <string name="individual">Individual</string>
    <string name="herd">Herd</string>
    <string name="herd_identity">Name / Identity of Herd</string>
    <string name="no_of_animals">Number of Animals</string>
    <string name="no_of_individuals">No of Individuals</string>
    <string name="herd_name_label">Name / Identity of Herd</string>
    <string name="property_damage">Property Damage</string>
    <string name="damage_to_humans">Damage to Humans</string>
    <string name="humans_affected">Humans Affected</string>
    <string name="incidences">Incidences</string>
    <string name="incidents">Incidents</string>
    <string name="our_reports">Our Reports</string>
    <string name="reports">Reports</string>
    <string name="start_shift">Start Shift</string>
    <string name="end_shift">End Shift</string>
    <string name="animal">Animal</string>
    <string name="gender">Sex</string>
    <string name="male">Male</string>
    <string name="male_count">Male Count</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="female_count">Female Count</string>
    <string name="adults">Adults</string>
    <string name="sub_adults">Sub-Adults</string>
    <string name="juveniles">Juveniles</string>
    <string name="validation_ranger_name">Ranger Name is required.</string>
    <string name="validation_ranger_id">Ranger ID is required.</string>
    <string name="station">Station</string>
    <string name="ranch">Ranch</string>
    <string name="leader">Leader</string>
    <string name="no_of_members">No of Members</string>
    <string name="route">Route</string>
    <string name="mode">Mode</string>
    <string name="weather">Weather</string>
    <string name="purpose">Purpose</string>
    <string name="start_wp">Start WP</string>
    <string name="waypoint">Waypoint</string>
    <string name="end_wp">End WP</string>
    <string name="elephant_poaching">Elephant Poaching</string>
    <string name="bush_meat">Bush Meat</string>
    <string name="charcoal_burning">Charcoal Burning</string>
    <string name="charcoal_burning_kilns">Charcoal Burning (Kilns)</string>
    <string name="charcoal_burning_bags">Charcoal Burning (Bags)</string>
    <string name="registration_confirmation">Can you confirm that you have entered the right details?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_shift_successful">Shift successfully started.</string>
    <string name="registration_success">Hi {name} Welcome to RangerApp</string>
    <string name="shift_successfully_ended">Shift successfully ended</string>
    <string name="end_shift_confirmation">Are you sure you want to end current shift?</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="record_save_success_msg">Record successfully saved.</string>
    <string name="record_update_success_msg">Record successfully updated.</string>
    <string name="validation_photo">Photo is required!</string>
    <string name="name_of_waterhole">Name of Waterhole</string>
    <string name="level_of_water">Level of Water</string>
    <string name="no_of_animals_seen">No of Animals Seen</string>
    <string name="select_date">Select Date</string>
    <string name="end_shift_view_msg">End Shift Coordinates</string>
    <string-array name="weather_conditions">
        <item>Select Weather Condition</item>
        <item>Clear Sky</item>
        <item>Scattered Clouds</item>
        <item>Light Rain</item>
        <item>Heavy Rain</item>
        <item>Mist</item>
    </string-array>
    <string-array name="transport_modes">
        <item>Select Mode</item>
        <item>Air</item>
        <item>Vehicle</item>
        <item>Foot</item>
    </string-array>
    <string-array name="plants_unit_of_measure">
        <item>Select Unit</item>
        <item>Acres</item>
        <item>Hactares</item>
    </string-array>
    <string-array name="gender_array">
        <item>Select Sex</item>
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string-array name="vegetation_current_states_array">
        <item></item>
        <item>State 1</item>
        <item>State 2</item>
        <item>State 3</item>
    </string-array>
    <string-array name="seasons_array">
        <item>Select Season</item>
        <item>Summer</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Fall</item>
    </string-array>
    <string-array name="age_units_array">
        <item>Select Unit</item>
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>
    <string-array name="base_stations">
        <item>Select Station</item>
        <item>ST2-0</item>
        <item>ST3-0</item>
        <item>ST5-1</item>
        <item>ST5-3</item>
        <item>ST5-5</item>
        <item>ST5-7</item>
        <item>ST6-0</item>
        <item>ST8-0</item>
    </string-array>
    <string-array name="ranches">
        <item>Select Ranch</item>
        <item>Amaka</item>
        <item>Bachuma</item>
        <item>Bura</item>
        <item>Choke</item>
        <item>Dawida</item>
        <item>Jojoba</item>
        <item>Kambanga</item>
        <item>Kasigau</item>
        <item>Kutima</item>
        <item>L.M.D</item>
        <item>Maungu</item>
        <item>Mgeno</item>
        <item>Mwabeja Ranch</item>
        <item>Ndara</item>
        <item>Rukinga</item>
        <item>Sagalla</item>
        <item>Taita</item>
        <item>Taru</item>
        <item>Wangala</item>
        <item>Washumbu</item>
    </string-array>
    <string-array name="charcoal_modes_of_transport">
        <item>Select Mode</item>
        <item>Foot</item>
        <item>Vehicle</item>
        <item>Other</item>
    </string-array>
    <string-array name="charcoal_kilns_actions_taken">
        <item>Select Action</item>
        <item>None</item>
        <item>Destroyed on Site</item>
        <item>Taken to Greenhouse/HQ</item>
        <item>Warned</item>
    </string-array>
    <string-array name="charcoal_bags_actions_taken">
        <item>Select Action</item>
        <item>Taken to Greenhouse/HQ</item>
        <item>Taken to Chief\'s camp</item>
        <item>Warned</item>
        <item>Taken to MacKinnon Police St.</item>
        <item>Taken to Voi Police Station</item>
        <item>Taken to Mwatate Police Station</item>
        <item>Taken to Wundanyi Police Station</item>
        <item>Taken to Mwakitau Police Station</item>
        <item>Taken to Taveta Police Station</item>
        <item>Taken to Kishushe Police Station</item>
    </string-array>
    <string-array name="kiln_freshness_levels">
        <item>Select State</item>
        <item>In Progress</item>
        <item>New</item>
        <item>Harvested</item>
    </string-array>
    <string name="age">Age</string>
</resources>