<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:gravity="center"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/tool_bar_top_padding"
		android:minHeight="?attr/actionBarSize"
		android:background="@color/bg"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
	
	<ScrollView
	    android:id="@+id/scollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/toolbar"
		android:fillViewport="true"
		android:background="@android:color/white" >
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
			
		    <LinearLayout
		        android:id="@+id/switchView"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:minHeight="40dp"
		        android:background="#F5F5F5"
		        android:gravity="center"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:layout_marginBottom="16dp" >
		        
		        <RadioGroup
		            android:id="@+id/radioGroup"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">
		            
		            <RadioButton 
		                android:id="@+id/radio_individual"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/individual"
						android:onClick="onTypeRadioButtonClicked"
						android:layout_marginRight="25dp"
						android:checked="true" />
					
					<RadioButton 
					    android:id="@+id/radio_herd"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/herd"
						android:onClick="onTypeRadioButtonClicked" />
				</RadioGroup>
		    </LinearLayout>
		    
		    <include layout="@layout/camera_location"/>
		    
		    <LinearLayout
		        android:id="@+id/individualLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:paddingTop="16dp" >
		        
		        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/animal"
	            android:textSize="18sp"
	            android:textColor="@color/bg" />
		        
		        <AutoCompleteTextView
			        android:id="@+id/animalNameView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="15dp"
			        android:inputType="textCapSentences" />
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/gender"
		            android:paddingLeft="5dp"
		            android:textSize="18sp"
		            android:textColor="@color/bg"
		            android:layout_marginBottom="5dp" />
		        
		        <RadioGroup
		            android:id="@+id/genderGroup"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:layout_marginBottom="15dp" >
		            
		            <RadioButton 
		                android:id="@+id/radio_gender_male"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/male"
						android:onClick="onGenderRadioButtonClicked"
						android:layout_marginRight="10dp" />
					
					<RadioButton 
					    android:id="@+id/radio_gender_female"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/female"
						android:onClick="onGenderRadioButtonClicked"
						android:layout_marginRight="10dp" />
					
					<RadioButton 
					    android:id="@+id/radio_gender_unknown"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/unknown"
						android:onClick="onGenderRadioButtonClicked" />
					
				</RadioGroup>
				
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/age"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <Spinner
		            android:id="@+id/ageSpinner"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="10dp" />
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/distance_seen"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <EditText
			        android:id="@+id/distanceSeenView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal" />
		          
			</LinearLayout>
			
			<LinearLayout
		        android:id="@+id/herdLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:paddingTop="16dp"
				android:visibility="gone" >
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/species"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <AutoCompleteTextView
			        android:id="@+id/typeSpeciesView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="15dp"
			        android:inputType="textCapSentences" />
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/no_of_individuals"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <EditText
			        android:id="@+id/herdNoOfAnimalsView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:inputType="number" />
		        
		        <LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:paddingRight="3dp" >
					
				    <LinearLayout
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:orientation="vertical"
				        android:layout_weight="0" >
				        
			            <TextView
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:text="@string/adults"
				            android:textSize="18sp"
				            android:textColor="@color/bg"
				            android:layout_marginBottom="5dp" />
				        
				        <EditText
					        android:id="@+id/adultsCountView"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:layout_marginBottom="10dp"
					        android:inputType="number" />
				        
					</LinearLayout>
					
				    <LinearLayout
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:orientation="vertical"
				        android:layout_weight="1" >
				        
			            <TextView
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:text="@string/sub_adults"
				            android:textSize="18sp"
				            android:textColor="@color/bg"
				            android:layout_marginBottom="5dp"
				            android:gravity="center_horizontal" />
				        
				        <EditText
					        android:id="@+id/semiAdultsCountView"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:layout_marginBottom="10dp"
					        android:inputType="number"
					        android:gravity="center_horizontal" />
			        
					</LinearLayout>
					
				    <LinearLayout
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:orientation="vertical"
				        android:layout_weight="0" >
				        
			            <TextView
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:text="@string/juveniles"
				            android:textSize="18sp"
				            android:textColor="@color/bg"
				            android:layout_marginBottom="5dp" />
				        
				        <EditText
					        android:id="@+id/juvenilesCountView"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:layout_marginBottom="10dp"
					        android:inputType="number" />
			        
					</LinearLayout>
					
				</LinearLayout>
				
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/distance_seen"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <EditText
			        android:id="@+id/herdDistanceSeenView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal"
			        android:layout_marginBottom="10dp" />
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/herd_name_label"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <EditText
			        android:id="@+id/herdNameView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="15dp"
			        android:inputType="textCapSentences" />
		        
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="16dp" >
		        
			    <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/ranch"
		            android:textSize="18sp"
		            android:textColor="@color/bg" />
		        
		        <Spinner
			        android:id="@+id/ranchSpinner"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="10dp" />
			    
			    <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="18sp"
			        android:textColor="@color/bg"
			        android:text="@string/extra_notes_optional" />
		        
		        <EditText
			        android:id="@+id/extraNotes"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:inputType="textCapSentences"
			        android:minLines="2" />
				
			    <Button
			        android:id="@+id/saveBtn"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/save"
			        android:background="@color/bg"
			        android:textColor="@android:color/white"
			        android:layout_marginLeft="5dp"
			        android:layout_marginRight="5dp" />
			    
			</LinearLayout>
			
	    </LinearLayout>
	</ScrollView>
</RelativeLayout>