<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:gravity="center"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/tool_bar_top_padding"
		android:minHeight="?attr/actionBarSize"
		android:background="@color/bg"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
	
	<ScrollView
	    android:id="@+id/scollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/toolbar"
		android:fillViewport="true"
		android:background="@android:color/white" >
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp" >
			
		    <include layout="@layout/camera_location"/>		
		    
		    <EditText
			        android:id="@+id/waterholeName"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/name_of_waterhole"
			        android:layout_marginBottom="15dp" />
		    
		    <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/level_of_water"
	            android:layout_marginBottom="5dp" />
	        
	        <Spinner
	            android:id="@+id/levelOfWaterSpinner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="10dp" />
		    
		    <EditText
		        android:id="@+id/noOfAnimalsSeenView"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/no_of_animals_seen"
		        android:layout_marginBottom="15dp" />
			    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:textColor="@color/bg"
		        android:text="@string/extra_notes_optional" />
	        
	        <EditText
		        android:id="@+id/extraNotes"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="15dp" />
	        
		    <Button
		        android:id="@+id/saveBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/save"
		        android:background="@color/bg"
		        android:textColor="@android:color/white"
		        android:layout_marginStart="5dp" />
		    
	    </LinearLayout>
	</ScrollView>
</RelativeLayout>